site/styles/_collections.scss
.page-collection {
  @extend .clearfix;

  h2 {
    @include heading-3-style;
  }
}

.page-collection-slider {
  padding: 0;
  padding-bottom: var(--collection-padding-bottom);
  position: relative;
  z-index: 8;
}

.page-collection-slider-title,
.page-collection-list-title,
.swiper-title {
  flex-direction: row;
  justify-content: space-between;
  padding: 0;
  padding-left: 20px;
  position: relative;
  z-index: 8;
  @include media-breakpoint-up(md) {
    padding-left: 0;
  }
}

.page-collection-list-title {
  padding-left: 0;
}

.poster-image {
  display: block;
}

/* stylelint-disable selector-max-compound-selectors, max-nesting-depth */
.page-collection-item,
.slider-item,
.swiper-slide {
  @extend .meta-item;
  float: left;
  padding: 5px;
  &:first-child {
    margin-left: -5px;
  }

  h2 {
    @include subtitle-1-style;
  }

  .title {
    @include subtitle-1-style;
    line-height: 1.2;
  }

  > a {
    .poster {
      .hover {
        @extend .d-flex;
        background: rgba(var(--body-bg-rgb), 0.8);
        bottom: 0;
        flex-direction: column;
        justify-content: space-between;
        left: 0;
        opacity: 0;
        padding: 0 15px; // No vertical padding so that in edge cases where multiple purchase options are displayed there's enough space.
        position: absolute;
        right: 0;
        top: 0;
        transition: opacity 0.25s ease-in;
        z-index: 100;

        .buttons {
          @extend .d-flex;
          align-items: center;
          flex-direction: row;

          // If there are multiple types of buttons shown here, using flex gap
          // will space them out.
          gap: 16px;
          justify-content: center;
          padding-top: 10px;
          position: relative;
          width: 100%;

          s72-can-be-watched-now {
            margin-left: auto;
          }

          s72-userwishlist-button {
            flex-shrink: 0;
          }

          .s72-pricing-button-container {
            @extend .d-flex;
            align-items: center;
            flex-direction: column;
            justify-content: center;

            .s72-btn {
              min-width: 140px;
              width: auto;

              .verb,
              .price {
                font-size: 14px;
              }

              &:nth-child(2) {
                margin-left: 0;
                margin-top: 10px;
              }
            }
          }

          .s72-btn-purchase {
            min-width: 140px;
            width: auto;

            .verb {
              font-size: 14px;
            }
          }

          .btn-wishlist .s72-btn-wishlist {
            font-size: 14px;
            line-height: 18px;

            .s72-icon-wishlist-remove,
            .s72-icon-wishlist-add {
              color: #fff;
              font-size: 18px !important;
            }
          }
        }

        .content {
          @extend .d-flex;
          flex-direction: column;
          height: 100%;
          justify-content: center;
          width: 100%;

          .titles {
            h4 {
              color: var(--body-color);
              font-size: 18px;
              font-weight: $font-weight-normal;
              margin: 0;
              padding: 0;
              text-align: center;
              @include media-breakpoint-up(xxl) {
                font-size: 18px;
              }
            }

            .meta-item-tagline {
              color: var(--body-color);
              display: inline-block;
              font-weight: $font-weight-normal;
              margin: 0;
              padding: 0;

              .meta-item-tagline-divider {
                display: none;
                font-size: 14px;
              }

              .meta-item-tagline-item {
                font-size: 14px;
                opacity: 0.8;

                &:nth-child(3) {
                  display: none;
                }
              }
            }
          }

          .strap {
            @extend .d-flex;
            flex-wrap: wrap;
            justify-content: center;
            padding-top: 10px;
            .s72-classification-label {
              font-size: 12px;
            }
          }

          .meta-item-synopsis {
            text-align: center;
          }

          .synopsis {
            p {
              color: var(--body-color);
              font-size: 12px;
              line-height: 14px;
              margin-bottom: 0;
            }
          }

          .bonuses {
            color: #fff;
            font-size: 12px;
            font-style: italic;
            font-weight: $font-weight-bold;
            margin-top: 5px;
            text-align: center;
          }

          a {
            @include a;
          }
        }

        .titles {
          text-align: center;
        }

        .btn-wishlist {
          align-self: center;
        }
      }

      &.poster-landscape {
        .hover {
          .s72-pricing-button-container {
            @extend .d-flex;
            align-items: center;
            flex-direction: column;
            justify-content: center;

            .s72-btn {
              min-width: 140px;
              width: auto;

              &:nth-child(2) {
                margin-left: 0;
                margin-top: 10px;
              }
            }
          }
        }
      }

      .s72-subscribe-trial-label {
        display: none;
      }
    }

    &:hover {
      .hover {
        display: none !important;
        opacity: 0;
        @include media-breakpoint-up(md) {
          display: flex !important;
          opacity: 1;
        }
      }
    }
  }

  .caption {
    padding: 4px 0;

    .crumb {
      @extend .d-flex;

      span {
        color: rgba(255, 255, 255, 0.8);
        display: inline-block;
        font-size: 12px;
        font-weight: $font-weight-normal;
        padding-right: 4px;
        @include media-breakpoint-up(md) {
          font-size: 12px;
        }
      }
    }

    .meta-item-tagline {
      .meta-item-tagline-item {
        text-transform: uppercase;
      }
    }
  }
}
/* stylelint-enable selector-max-compound-selectors, max-nesting-depth */

@for $i from 1 through 10 {
  $width: round($page-collection-container-width / $i);
  $child-width: $width - ($page-collection-item-padding-horizontal * 2);
  .page-collection-item-#{$i},
  .slider-item-#{$i} {
    .poster-image {
      z-index: 1;
    }
  }
}

.page-collection-list {
  padding: 0 20px var(--collection-padding-bottom);
  @include media-breakpoint-up(lg) {
    padding: 0 0 var(--collection-padding-bottom);
  }

  .page-collection-items {
    @extend .d-flex;
    flex-wrap: wrap;

    .partial {
      @extend .col-6;
      @extend .col-md-4;
      @extend .col-lg-3;
      padding: 5px 5px 10px;
    }

    .page-collection-list-item-landscape {
      &.page-collection-item-4 {
        @extend .col-6;
        @extend .col-md-4;
        @extend .col-lg-3;
        padding: 5px 5px 10px;
      }
    }

    .page-collection-list-item-portrait {
      &.page-collection-item-6 {
        @extend .col-6;
        @extend .col-md-3;
        @extend .col-lg-3;
        @extend .col-xl-2;
        padding: 5px 5px 10px;
      }
    }
  }
}

.collection-items {
  margin: 0 auto;
}

